2009-09-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Updated the contact import text to be more
	precise with regard to support input formats.

2009-09-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserDefaults.m
	(-initWithTableURL:uid:fieldName:): removed the "shouldPropagete"
	parameter.
	(-primaryStoreProfile): we now propagate the values in the cache
	unconditionally.

	* SoObjects/SOGo/SOGoUser.m (-initWithLogin:roles:trust:):
	the trust no longer prevent user settings and defaults to
	propagate in the cache, since we no longer use gdnc for it.

2009-09-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/generic.js (onLoadHandler): don't trigger
	the alarm refresh if the "calendarBannerLink" link is not
	available (when calendar is disabled).

	* UI/WebServerResources/UIxPreferences.js (initPreferences)
	(savePreferences): don't bother with the categoriesList if it's
	not accessible (when calendar is disabled).

2009-09-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tests/test-config.py: new functional test to validate the test
	configuration file.

	* UI/PreferencesUI/UIxPreferences.m (-userComposeMessagesType):
	return a default value of @"text" if the default compose type has
	never been changed by the user. Otherwise, saving the preferences
	will never enable the window to be closed since the new value will
	always be different from nil.

2009-09-17  Cyril Robert <crobert@inverse.ca>

	* UI/Contacts/UIxListEditor.m: Renamed "name" to "listName"

2009-09-16  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Updated the ICS import text to be more specific
	* We now warn for no SSL bundle in GNUstep when
	trying to load a remote ICS file and it's failing
	over SSL. It's a guess but it's better than nothing.

2009-09-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m (-lookupName:inContext:acquire:):
	instanciated objects may be queried twice during the same session,