@@ -536,3 +536,4 @@ vtodo_class2 = "(Tâche confidentielle)";
 
 "Subscribe to a web calendar..." = "S'inscrire à un agenda en ligne...";
 "URL of the Calendar" = "URL de l'agenda";
+"Web Calendar" = "Calendrier web";
