@@ -536,3 +536,4 @@ vtodo_class2 = "(Tasg gyhoeddus)";
 
 "Subscribe to a web calendar..." = "Subscribe to a web calendar...";
 "URL of the Calendar" = "URL of the Calendar";
+"Web Calendar" = "Web Calendar";
